[package]
name = "czdb"
version = "0.1.0"
edition = "2021"
authors = ["Alden Clark"]
license = "MIT"
readme = "README.MD"
repository = "https://github.com/AldenClark/czdb-rs"
documentation = "https://docs.rs/czdb"
keywords = ["czdb", "ip", "ipv4", "ipv6"]
categories = ["Parsing tools"]
description = "A pure Rust library for parsing CZDB-format IP databases."

[dependencies]
base64 = "0.22.1"
memmap2 = "0.9.5"
rmpv = "1.3.0"
thiserror = "2.0.3"
aes = "=0.8.3"
cipher = { version = "=0.4.4", features = ["block-padding"] }
chrono = "0.4.38"
byteorder = "1.5.0"
