[package]
name = "czdb"
version = "0.1.3"
edition = "2024"
authors = ["Alden Clark"]
license = "MIT"
readme = "README.MD"
repository = "https://github.com/AldenClark/czdb-rs"
documentation = "https://docs.rs/czdb"
keywords = ["czdb", "ip", "ipv4", "ipv6"]
categories = ["parsing", "science::geo"]
description = "A pure Rust library for parsing CZDB-format IP databases."

[dependencies]
base64 = "^0.22"
memmap2 = { version = "^0.9", optional = true }
rmpv = "^1.3"
thiserror = "^2.0"
aes = "0.8.4"
cipher = { version = "=0.4.4", features = ["block-padding"] }
chrono = "^0.4"
byteorder = "^1.5"

[features]
default = []
mmap = ["memmap2"]
